frontend/app/src/styles/global.scss
@use "./mixins" as *;

html,
body,
div,
span,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
abbr,
address,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
samp,
small,
strong,
sub,
sup,
var,
b,
i,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    outline: 0;
    border: 0;
    background: transparent;
    padding: 0;
    vertical-align: baseline;
    font-size: 100%;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

nav ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

* {
    -webkit-tap-highlight-color: transparent;
}

blockquote::before,
blockquote::after,
q::before,
q::after {
    content: "";
}

a {
    margin: 0;
    background: transparent;
    cursor: pointer;
    padding: 0;
    vertical-align: baseline;
    text-decoration: none;
    color: inherit;
    font-size: inherit;
}

ins {
    background-color: none;
    text-decoration: none;
    color: currentColor;
}

mark {
    background-color: none;
    color: inherit;
    font-weight: bold;
}

del {
    text-decoration: line-through;
}

abbr[title],
dfn[title] {
    border: none;
    cursor: help;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

hr {
    display: block;
    margin: 0;
    border: 0;
    border-top: 1px solid currentColor;
    padding: 0;
    height: 1px;
}

input,
select {
    vertical-align: middle;
}

div[data-lastpass-icon-root] {
    display: none;
}

html,
body {
    position: relative;
    width: 100%;
    height: 100%;
}

:root {
    --font-size: 16px;
}

html {
    box-sizing: border-box;
    font-size: var(--font-size);
}
*,
*:before,
*:after {
    box-sizing: inherit;
}

:root {
    --bg: #121212;
    --prize: #f79413;
    --font-fallback: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu,
        Cantarell, "Helvetica Neue", sans-serif --font: "Roboto", sans-serif;
    --font: "Roboto", sans-serif;
    --font-bold: "Manrope", sans-serif;
    --safe-inset: 0;
}

body {
    transition:
        background ease-in-out 300ms,
        color ease-in-out 150ms,
        padding ease-in-out 150ms;
    background: var(--bg);
    color: var(--txt);
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: var(--font-fallback);
    font-family: var(--font);
    font-weight: 400;
    font-size: toRem(16);
    line-height: 135%;

    display: flex;
    height: 100vh;
    height: calc(var(--vh, 1vh) * 100);
    height: 100dvh; // firefox will ignore this
    position: fixed;

    &.fill {
        transition: none;
        padding: 0;
    }

    &.landing-page {
        display: block;
        line-height: toRem(28);
        background: var(--landing-bg);
        color: var(--landing-txt);
        min-height: 100vh;
        height: unset;
        position: unset;
    }

    @media (hover: none) {
        @include no_user_select();
    }
}

// this is designed to target only iOS devices where the app is saved to home screen
// and the device does not have a home button (hence the min-height check)
// and the virtual keyboard is not visible
body.needs-safe-inset:not(.keyboard) {
    --safe-inset: 32px;
    padding-bottom: var(--safe-inset);

    .align-bottom {
        .modal-content {
            padding-bottom: var(--safe-inset);
        }
    }

    .sheet_content {
        padding-bottom: var(--safe-inset) !important;
    }
}

h1,
h2,
h3,
h4 {
    font-family: var(--font-bold);
    font-weight: 700;
}

textarea {
    font-family: var(--font-fallback);
    font-family: var(--font);
}

a {
    color: #22a7f2;
    color: var(--link-underline);
}

.iti__flag {
    background-image: url("assets/flags.png") !important;
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
    .iti__flag {
        background-image: url("assets/flags@2x.png") !important;
    }
}

.tip-dollar {
    @include font-size(fs-260);
    position: absolute;
    pointer-events: none;
    transform-origin: 50% 50%;
    top: -1000px;
    left: -1000px;
    @include z-index("dollar");
}

.is-translatable {
    position: relative;
    top: 4px;
}

.markdown-wrapper {
    h1 {
        @include font(bold, normal, fs-130);
    }

    h2 {
        @include font(bold, normal, fs-120);
    }

    h3 {
        @include font(bold, normal, fs-110);
    }

    h1,
    h2,
    h3,
    h4 {
        color: "inherit";
    }

    h1,
    h2,
    h3,
    h4 {
        margin-top: toRem(24);
        margin-bottom: toRem(16);
        &:first-child {
            margin-top: 0;
        }
    }

    p,
    ol,
    ul,
    hr,
    pre,
    blockquote {
        margin-bottom: toRem(16);
        &:last-child {
            margin-bottom: 0;
        }
    }

    ul,
    ol {
        padding-left: toRem(32);
    }

    ul li {
        list-style-type: disc;
    }

    ul li li {
        list-style-type: circle;
    }

    ul li li li {
        list-style-type: square;
    }

    ol li {
        list-style-type: decimal;
    }

    ol li li {
        list-style-type: lower-alpha;
    }

    ol li li li {
        list-style-type: lower-greek;
    }

    pre,
    code {
        font-family: Menlo, Monaco, "Courier New", monospace;
    }

    code:not(.hljs) {
        color: var(--code-txt);
        background-color: var(--code-bg);
        padding: 3px 5px;
        border-radius: 4px;
    }

    code.hljs {
        border-radius: $sp3;
        box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.8);
        display: block;
        white-space: pre;
        font-size: 0.9rem;
    }

    blockquote {
        padding: 0 toRem(16);
        border-left: toRem(4) solid var(--bd);
        color: var(--txt-light);
    }

    a {
        text-decoration: underline;
    }

    img,
    canvas,
    iframe,
    video,
    svg,
    select,
    table,
    textarea {
        max-width: 100%;
    }

    table {
        width: 100%;
        margin-bottom: toRem(8);
    }

    td,
    th {
        padding: toRem(8);
        border: 1px solid var(--code);
    }

    th {
        font-weight: 500;
    }

    &.suppressLinks {
        a {
            pointer-events: none;
            color: inherit;
        }
    }
}

// TODO get the status bar height programatically from the device
body.native-android {
    --status-bar-height: 40px; // This is the height we'll take as relevant!

    // Prevent pinch-zooming on Android devices
    // Note: tested meta viewport `user-scalable=no`, but seems like Tauri
    // webview does not respect it
    touch-action: pan-x pan-y;
    height: 100%;
    background: var(--background-0);

    // Status bar on Android devices
    &:before {
        content: "";
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: var(--status-bar-height);
        background-color: var(--background-0);
        z-index: 1;
    }

    // We need to adjust the main content to account for the status bar height!
    // This is a workaround for the Android status bar issue
    // where the content is pushed down by the status bar height.
    &:not(.landing-page) > main {
        // height: calc(100vh - var(--status-bar-height));
        // we also need to account for the safe area at the bottom
        padding-top: var(--status-bar-height) !important;
    }

    &.landing-page {
        &:before {
            background-color: #1b1c20;
        }

        > .wrapper {
            top: var(--status-bar-height);
        }

        > .main {
            margin-top: var(--status-bar-height);
            padding-top: var(--status-bar-height);
            height: calc(100vh - var(--status-bar-height));
        }
    }
}

svelte-virtual-list-viewport {
    width: 100%;
}

#masked_overlay {
    transition: opacity 250ms ease-in-out;
    position: fixed;
    inset: 0;
    background: var(--background-0);
    z-index: 90;
    pointer-events: none;
    opacity: 0;
    &.visible {
        opacity: 0.5;
    }
}

@keyframes fade-in {
    from {
        opacity: 0;
    }
}

@keyframes fade-out {
    to {
        opacity: 0;
    }
}

@keyframes slide_down {
    to {
        transform: translateY(100%);
    }
}

@keyframes slide_up {
    from {
        transform: translateY(100%);
    }
}

@keyframes slide-to-right {
    to {
        transform: translateX(100vw);
    }
}

@keyframes slide-from-right {
    from {
        transform: translateX(100vw);
    }
}

@keyframes slide-to-left {
    to {
        transform: translateX(-100vw);
    }
}

@keyframes slide-from-left {
    from {
        transform: translateX(-100vw);
    }
}

$speed: 250ms;

html:active-view-transition-type(slide_left, slide_right) {
    &::view-transition-old(message_footer),
    &:view-transition-new(message_footer) {
        animation: none;
    }
    &::view-transition-old(bottom_nav_bar),
    &:view-transition-new(bottom_nav_bar) {
        animation: none;
    }
    &::view-transition-old(communities_sheet),
    &:view-transition-new(communities_sheet) {
        animation: none;
    }
}

html:active-view-transition-type(slide_left) {
    &::view-transition-old(root) {
        animation:
            $speed ease-in both slide-to-left,
            $speed ease-in both fade-out;
    }
    &::view-transition-new(root) {
        animation:
            $speed ease-out both slide-from-right,
            $speed ease-out both fade-in;
    }
}

html:active-view-transition-type(slide_right) {
    &::view-transition-old(root) {
        animation:
            $speed ease-in both slide-to-right,
            $speed ease-in both fade-out;
    }
    &::view-transition-new(root) {
        animation:
            $speed ease-out both slide-from-left,
            $speed ease-out both fade-in;
    }
}

